2011-11-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2io.cc (jtag2::doJtagCommand): Slightly improve the
	change from rev 240: don't attempt to retry definitively
	rejected commands; do not attempt to perform USB endpoint
	resets when the communication went fine but the result was
	not the expected one.

2011-11-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag.h: Add definition for MTYPE_XMEGA_APP_FLASH (thanks
	to Detlev's findings, again)
	* src/jtag2rw.cc: Implement MTYPE_XMEGA_APP_FLASH access, and
	fix MTYPE_XMEGA_REG access (must not enable programming mode).

2011-11-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Based on Detlev Kraft's guesses (many thanks to him again!),
	implement the new Xmega device descriptor setting for V7+
	firmware.
	* src/jtag.h: define xmega_device_desc_type
	* src/devdescr.cc: implement xmega_device_desc_type for
	ATxmega128A1(+revD)
	* src/jtag2io.cc: providing the firmware supports it, use
	xmega_device_desc_type rather than jtag2_device_desc_type when
	talking to an Xmega device

2011-11-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Attempt to implement some basic Xmega support for firmware
	revisions 7.x and above, i.e. AVR Studio 5 firmware.  Many thanks
	to Detlev Kraft for providing me with the details from his
	reengineering effort!
	* src/jtag.h: Add two new undocumented commands for Xmegas.
	* src/jtag2.h: Add the has_full_xmega_support feature flag.
	* src/jtag2io.cc: Determine whether the firmware is recent enough
	for has_full_xmega_support (>= 7.x).
	* src/jtag2bp.cc: Use CMND_SET_BREAK_XMEGA for the first two
	Xmega breakpoints, and software BPs for the rest.

2011-11-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag.h: Add REGISTER_SPACE_ADDR_OFFSET and the corresponding
	MTYPE_XMEGA_REG; add statusAreaAddress and cpuRegisterAreaAddress
	methods to cope with Xmega vs. megaAVR differences.
	* src/jtag1.h: Implement statusAreaAddress and
	cpuRegisterAreaAddress methods, respectively.